# django

./: .gitignore  .gitmodules  README.md
atom_src/jango_calibration/: CMakeLists.txt  package.xml
bags/: .gitignore
datasets/test/: dataset.json  dataset_corrected.json
docker/: Dockerfile  docker-compose.yml
jango_src/fath_pivot_mount_description/: package.xml
jango_src/jango/: jango_collect_calib_data.py  jango_collect_j_configs copy.py  jango_collect_j_configs.py  jango_moveit.py  manipulator_left copy.yaml  manipulator_left.yaml  manipulator_right copy.yaml  manipulator_right.yaml  move_group_python_kinova.py  right_arm.yaml  rosbag_record.sh  test.txt
jango_src/ouster_description/: README.md
jango_src/tf2/: README.md
jango_src/tor42_ridgeback/tor42_ridgeback_bringup/: CMakeLists.txt  package.xml
jango_src/tor42_ridgeback/tor42_ridgeback_bringup/launch/: ewellix_bringup.launch  left_kinova_vision_rgbd.launch  ridgeback_dual_gen3_bringup.launch  right_kinova_vision_rgbd.launch  tor42_kinova.launch  zed2i.launch  zed2i_delayed_remote.launch  zed2i_remote.launch
jango_src/tor42_ridgeback/tor42_ridgeback_bringup/scripts/: check_secondary.bash  envars
jango_src/tor42_ridgeback/tor42_ridgeback_description/: CMakeLists.txt  package.xml
jango_src/tor42_ridgeback/tor42_ridgeback_description/meshes/: aux_plate_200.dae  dual_gen3_mount.dae  lidar_cam_plate.dae
jango_src/tor42_ridgeback/tor42_ridgeback_description/urdf/: jango_new.urdf  tor42_ridgeback.urdf  tor42_ridgeback.urdf.xacro
robot_toolkit/: conversion_angles.py  test_pick_n_place_graspnet.py
(+66 files in other folders)
